--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "react-dom": "^17.0.2",
     "react-grid-system": "^7.1.2",
     "react-icons": "^4.2.0",
-    "react-responsive-carousel": "^3.2.18",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.2",
     "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.2.1",
     "web-vitals": "^1.1.1"
   },
